[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu/MYRIADPRO-BOLDIT.OTF" type="DynamicFontData" id=1]
[ext_resource path="res://game/239px-Plus+.svg.png" type="Texture" id=2]
[ext_resource path="res://stats.gd" type="Script" id=3]
[ext_resource path="res://game/1647985412_1-gamerwall-pro-p-temnii-zelenii-fon-krasivie-1.jpg" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="stats" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 368.0
margin_top = 176.0
margin_right = 1568.0
margin_bottom = 1376.0
rect_scale = Vector2( 0.35, 0.3 )
texture = ExtResource( 4 )
stretch_mode = 2

[node name="skillpoint" type="Label" parent="."]
margin_left = 384.0
margin_top = 200.0
margin_right = 573.0
margin_bottom = 264.0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 1 )
text = "Очки умений"

[node name="hp_baff" type="Label" parent="."]
margin_left = 384.0
margin_top = 280.0
margin_right = 522.0
margin_bottom = 320.0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 1 )
text = "Здоровье"

[node name="def_baff" type="Label" parent="."]
margin_left = 384.0
margin_top = 456.0
margin_right = 512.0
margin_bottom = 488.0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 1 )
text = "Защита"

[node name="dam_baff" type="Label" parent="."]
margin_left = 384.0
margin_top = 368.0
margin_right = 488.0
margin_bottom = 400.0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 1 )
text = "Атака"

[node name="plus_hp" type="Button" parent="."]
margin_left = 696.0
margin_top = 256.0
margin_right = 772.0
margin_bottom = 326.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="plus_def" type="Button" parent="."]
margin_left = 696.0
margin_top = 432.0
margin_right = 772.0
margin_bottom = 502.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="plus_dam" type="Button" parent="."]
margin_left = 696.0
margin_top = 344.0
margin_right = 772.0
margin_bottom = 414.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="damage" type="Label" parent="."]
margin_left = 568.0
margin_top = 368.0
margin_right = 672.0
margin_bottom = 400.0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="hp" type="Label" parent="."]
margin_left = 568.0
margin_top = 280.0
margin_right = 672.0
margin_bottom = 312.0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="def" type="Label" parent="."]
margin_left = 568.0
margin_top = 456.0
margin_right = 672.0
margin_bottom = 488.0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="point" type="Label" parent="."]
margin_left = 624.0
margin_top = 200.0
margin_right = 728.0
margin_bottom = 232.0
custom_colors/font_color = Color( 0.768627, 0.788235, 0.411765, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[connection signal="button_down" from="plus_hp" to="." method="_on_plus_hp_button_down"]
[connection signal="button_down" from="plus_def" to="." method="_on_plus_def_button_down"]
[connection signal="button_down" from="plus_dam" to="." method="_on_plus_dam_button_down"]
